Construct an example deployment

--- a/templates/deployment.yaml.j2
+++ b/templates/deployment.yaml.j2
@@ -1,6 +1,6 @@
 deployment:
     {{name}}:
-        {{description}}:
+        description: {{description}}:
         input:
             {{input}}
         output:
