Itarete through list in jinja

--- a/templates/deployment.yaml.j2
+++ b/templates/deployment.yaml.j2
@@ -6,4 +6,6 @@ deployment:
         output:
             {{output}}
         functions:
-            {{functions}}
+            {% for thisFunction in functions %}
+                {{ "- " + thisFunction }}
+            {% endfor %}
