--- a/templates/deployment.yaml.j2
+++ b/templates/deployment.yaml.j2
@@ -1,7 +1,8 @@
-{# Interfaces are provided as dictionary with multiple entries. #}
-{# This macro "enrolls" the dict, puts each interfaces in its   #}
-{# own block with its properties below. Note that this macro    #}
-{# includes a trailing new-line                                 #}
+{# This Jinja2 macro processes a dictionary of interfaces and formats them #}
+{# as a block with their properties. Each interface is printed with its    #}
+{# key and associated properties. If the interface has a "human_input"     #}
+{# property, it is included; otherwise, it is omitted.                     #}
+{# The macro ensures that each interface block is followed by a new line.  #}
 {% macro print_list_of_interfaces(list_of_interfaces) %}
 {% for key, value in list_of_interfaces.items() %}
             {{key}}: {
@@ -16,13 +17,19 @@
 {% endmacro %}
 deployment:
     {{name}}:
+{# This section provides a detailed description of the deployment. #}
+{# The description is word-wrapped to 78 characters and indented   #}
+{# appropriately for readability.                                  #}
         description: {{ ('\n' ~ description) | wordwrap(78) | replace('\n', '\n            ') }}
 
         input:
+{# Call the macro to print the list of input interfaces #}
 {{print_list_of_interfaces(input)}}
         output:
+{# Call the macro to print the list of output interfaces #}
 {{print_list_of_interfaces(output)}}
         functions:
+{# Loop through the list of functions and print each one #}
 {% for thisFunction in functions %}
          - {{thisFunction }}
 {% endfor %}
